[package]
name = "gimei"
version = "0.1.0"
authors = [ "woxtu <woxtup@gmail.com>" ]
license = "MIT"
description = "Generate fake name for Japanese"

[dependencies]
lazy_static = "0.1.*"
rand = "0.3"
yaml-rust = "*"

[dev-dependencies]
regex = "0.1.8"
regex_macros = "0.1.17"

[[test]]
name = "test"
path = "test/test.rs"
