[package]
name = "gimei"
version = "0.1.1"
authors = [ "woxtu <woxtup@gmail.com>" ]
edition = "2018"
description = "Generate fake name for Japanese"
readme = "README.md"
repository = "https://github.com/woxtu/rust-gimei"
license = "MIT"

[dependencies]
lazy_static = "1.0"
rand = "0.5"
yaml-rust = "0.4"

[dev-dependencies]
regex = "1.0"
