[package]
name = "gimei"
version = "0.1.1"
authors = [ "woxtu <woxtup@gmail.com>" ]
edition = "2018"
description = "Generate fake name for Japanese"
readme = "README.md"
repository = "https://github.com/woxtu/rust-gimei"
license = "MIT"

[dependencies]
lazy_static = "1.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
regex = "1.3"
